# SDFC-python

./: README.md  pyproject.toml  setup.py
SDFC/: __AbstractLaw.py  __AddonsMCMC.py  __GEV.py  __TransitionsMCMC.py  __init__.py  __release.py
SDFC/NonParametric/: __init__.py
SDFC/core/: __RHS.py
SDFC/src/: bayesian_mcmc.cpp
tests/: Table_MCMC.txt  Test_MCMC.ipynb  test_laws.py
tests/.ipynb_checkpoints/: Test_MCMC-checkpoint.ipynb
